# algos-cmake-example

./: CMakeLists.txt  README.md  task_a.cpp  task_b.cpp
